[package]
name = "pod_info"
version = "0.1.0"
authors = ["ghost <ghost.yue@gllue.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rs-docker = "0.0.51"
serde_json = "*"
crossbeam-channel = "0.3.9"
crossbeam-utils = "0.6"
regex = "1.2.1"
nix = "0.14.1"
local-ip = "0.1"
sys-info = "0.5.7"
actix-web = "1.0.0"
prometheus = "0.7"
lazy_static = "1.3"